--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,11 +32,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - run: make etcdadm
+      - run: |
+          make etcdadm
+          mv etcdadm etcdadm-linux-amd64
 
       - if: github.event_name == 'release'
         uses: skx/github-action-publish-binaries@release-2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: etcdadm
+          args: etcdadm-linux-amd64
