CI: Build a binary only for releases named "v*.*.*"

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,10 @@ on:
     branches:
       - master
   release:
-    types: [created]
+    types:
+      - created
+    tags:
+      - "v*.*.*"
 
 jobs:
   generate:
